// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test case "added-symbol" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,1 +1,2 @@
 export class Foo {}
+export class Bar {}
",
  "minChangeType": "none",
}
`;

exports[`Test case "namespace-to-object-type" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,4 +1,4 @@
-export namespace F {
-  export const a = 5;
-  export const b = 5;
-}
+export const F = {
+  a: 5,
+  b: 5,
+};
",
  "minChangeType": "major",
}
`;

exports[`Test case "removed-symbol" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,2 +1,1 @@
 export class Foo {}
-export class Bar {}
",
  "minChangeType": "major",
}
`;

exports[`Test case "symbol-add-export-type" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,1 +1,2 @@
 export namespace F {}
+export type F = Record<string, string>;
",
  "minChangeType": "major",
}
`;

exports[`Test case "symbol-add-export-value" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,1 +1,2 @@
 export interface F {}
+export const F = {};
",
  "minChangeType": "major",
}
`;

exports[`Test case "symbol-class-to-interface" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,3 +1,3 @@
-export class Foo {
+export interface Foo {
   a: string;
 }
",
  "minChangeType": "major",
}
`;

exports[`Test case "symbol-class-to-type" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,3 +1,5 @@
-export class Foo {
+class Foo {
   a: string;
 }
+
+export type { Foo };
",
  "minChangeType": "major",
}
`;

exports[`Test case "symbol-class-to-value-only" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,3 +1,5 @@
-export class Foo {
+class _Foo {
   a: string;
 }
+
+export let Foo: typeof _Foo;
",
  "minChangeType": "major",
}
`;

exports[`Test case "symbol-interface-to-type" 1`] = `
{
  "diff": "Index: patch
===================================================================
--- patch
+++ patch
@@ -1,4 +1,4 @@
-export interface Foo {
+export type Foo = {
   a: string;
   b: number;
-}
+};
",
  "minChangeType": "major",
}
`;
